Fix syling of messages and adjust to wrap into hambuger menu slightly earlier to prevent messages tab overflowing

--- a/public/css/header-footer.css
+++ b/public/css/header-footer.css
@@ -70,7 +70,7 @@ nav ul {
     list-style: none;
     padding-left: 0;
 
-    @media screen and (max-width: 45em) {
+    @media screen and (max-width: 50em) {
         flex-direction: column;
         &>:last-child{
             padding-bottom: 0.5em;
@@ -141,13 +141,13 @@ hamburger-menu {
     display: contents;
 }
 
-@media screen and (min-width: 45em) {
+@media screen and (min-width: 50em) {
     .HamburgerMenu-toggle {
         display: none;
     }
 }
 
-@media screen and (max-width: 45em) {
+@media screen and (max-width: 50em) {
     .HamburgerMenu-toggle {
         /*Button*/
         display: flex;
